# receiptiq

./: .gitignore  CHANGELOG.md  CODEX.md  PROJECT.md  README.md  ROADMAP.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260705_0001_initial_schema.py  20260705_0002_create_receipts.py  20260705_0003_add_processing_lifecycle.py  20260705_0004_add_ocr_fields.py
backend/app/: main.py  models.py  schemas.py
backend/app/api/: receipts.py  routes.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/ocr/: __init__.py  base.py  paddle.py  prepare.py
backend/app/services/: processing.py
docs/: architecture.md
frontend/: Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
scripts/: check.sh  reset_database.sh  setup_mac.sh  start_mac.sh  stop_mac.sh
tests/backend/: test_health.py  test_receipts.py
